--- a/Actividad 1/actividad1.ipynb
+++ b/Actividad 1/actividad1.ipynb
@@ -1562,6 +1562,13 @@
     "            col=\"Medical Condition\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://www.youtube.com/watch?v=ncfPK06nKA8&t=1404s"
+   ]
   }
  ],
  "metadata": {
